# PLImig

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  CalcIncl.cpp  LICENSE  MaskGeneration.cpp  PLImg.cpp  README.md  main.cpp  main.py  setup.cfg
cmake/: CodeCoverage.cmake  FindCUDAToolkit.cmake  FindNIFTI.cmake  FindPLIM.cmake  version.cmake
docs/: CMakeLists.txt  Doxyfile.in
plimg/: __init__.py  cmd.py  filters.py  histgram_toolbox.py  histogram_toolbox.py  mask.py  reader.py  writer.py
plimg/numba/: filters.py  mask.py
src/: CMakeLists.txt  exceptions.h  inclination.cpp  inclination.h  maskgeneration.cpp  maskgeneration.h  reader.cpp  reader.h  toolbox.cpp  toolbox.h  version.cpp  version.cpp.in  version.h  writer.cpp  writer.h
src/cuda/: cuda_kernels.cu  cuda_kernels.h  cuda_toolbox.cu  cuda_toolbox.h  define.h  toolbox.cu  toolbox.cuh  toolbox.h
tests/: CMakeLists.txt  conftest.py  test_cmd.py  test_filters.py  test_histgram_toolbox.py  test_histogram_toolbox.py  test_mask.py  test_maskgeneration.cpp  test_reader.cpp  test_reader.py  test_toolbox.cpp  test_writer.cpp  test_writer.py
tests/files/: demo.h5  demo.nii  demo.tiff
tests/files/full_execution/: NTransmittance.h5  Retardation.h5  Retardation.nii  Retardation.tiff
tests/files/median_filter/: median_5_expected_result.tiff  median_expected_result.tiff  median_input.tiff
