[metadata]
name = plimg
version = 0.1
author = Jan Andre Reuter
author_email = j.reuter@fz-juelich.de
#url = https://github.com/3d-pli/SLIX
description = PLI Mask Generator presents a fully automated way to create gray and white fiber masks from 3D-PLI measurements.
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
	appdirs
	tifffile
	numpy
	nibabel
	h5py
	tqdm
	cupy>=8.0.0
    opencv-python
tests_require =
	pytest
	flake8
	pytest-cov
python_requires =
	>= 3.6

[options.entry_points]
console_scripts =
    PLImg = plimg.cmd:main
